--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "yosay": "^1.0.0"
   },
   "devDependencies": {
+    "ejs": "^2.5.5",
     "eslint": "^3.1.1",
     "eslint-config-xo-space": "^0.15.0",
     "gulp": "^3.9.0",
